# Pipeline

./: README.md
202009/: 程序设计文档.docx
202009/watermark/: thread3mark.yuv
202009/workspace/: BlockQueue.hpp  PipelineMain.cpp
202205/: CMakeLists.txt
202205/data/camera_in/: image_copy.ipynb
202205/data/camera_out/: image_copy.ipynb
202205/doc/: OpenCV编译与配置.md  readme.md
202205/src/: BlockQueue.hpp  ImageAlgorithm.hpp  PipelineMain.cpp  PipelineThread.hpp  SerialMain.cpp  Watermark.hpp
watermark/: thread1mark.yuv  thread2mark.yuv
workspace/: AlgorithmClassA.hpp  AlgorithmClassB.hpp  AlgorithmClassC.hpp  Macro.hpp  ThreadsClass.hpp  UtilClass.hpp
